tests/rules/samples/test_file_1012_4.c
t_montype	g_globale;
t_montype	g_glob;